syntax = "proto3";

package propertyService;

import "proto/sdk/sdk.proto";

option go_package = "property-service/proto/property";

service propertyService {
  // Booking
  rpc GetBooking(MsgQueryBooking) returns (sdk.BaseResponse);
  rpc CountBookingStatus(MsgBooking) returns (sdk.BaseResponse);
  rpc CreateBooking(MsgBooking) returns (sdk.BaseResponse);
  rpc CancelBooking(MsgBooking) returns (sdk.BaseResponse);

  // Property
  rpc GetProperty(MsgQueryProperty) returns (sdk.BaseResponse);
  rpc CountPropertyStatus(MsgProperty) returns (sdk.BaseResponse);
  rpc CreateProperty(MsgProperty) returns (sdk.BaseResponse);
  rpc UpdateProperty(MsgProperty) returns (sdk.BaseResponse);
  rpc DeleteProperty(MsgDeleteProperty) returns (sdk.BaseResponse);

  // Review
  rpc CreateReview(MsgCreateReview) returns (sdk.BaseResponse);
  rpc UpdateReview(MsgUpdateReview) returns (sdk.BaseResponse);
  rpc DeleteReview(MsgDeleteReview) returns (sdk.BaseResponse);
  rpc GetReview(MsgQueryReview) returns (sdk.BaseResponse);

  // Amenity
  rpc CreateAmenity(MsgAmenity) returns (sdk.BaseResponse);
  rpc UpdateAmenity(MsgAmenity) returns (sdk.BaseResponse);
  rpc DeleteAmenity(MsgId) returns (sdk.BaseResponse);
  rpc GetAmenity(MsgQueryAmenity) returns (sdk.BaseResponse);

  // Favorite
  rpc CreateFavorite(MsgFavorite) returns (sdk.BaseResponse);
  rpc DeleteFavorite(MsgId) returns (sdk.BaseResponse);
  rpc GetFavorite(MsgQueryFavorite) returns (sdk.BaseResponse);
}

message MsgId {
  string id = 1;
}

message MsgGetBooking {
  string propertyId = 1;
}

message MsgProperty {
  optional string id = 1;

  string hostId = 2;
  string propertyType = 3;
  float overallRate = 4;

  int32 maxGuests = 5;
  int32 maxPets = 24;
  int32 numBeds = 6;
  int32 numBedrooms = 7;
  int32 numBathrooms = 8;

  optional bool isGuestFavor = 10;
  optional bool isAllowPet = 11;
  optional bool isSelfCheckIn = 12;
  optional bool isInstantBook = 13;

  string title = 14;
  string body = 15;

  optional string cityCode = 16;
  optional string nationCode = 17;
  optional string lat = 18;
  optional string long = 19;

  double nightPrice = 20;
  double serviceFee = 21;
  double taxPercent = 22;

  optional string status = 23;
  repeated MsgAmenity amenities = 25;

  optional string introCover = 26;
  repeated string introImages = 27;
}

message MsgDeleteProperty {
  string propertyId = 1;
}

message MsgGetProperty {
  string propertyId = 1;
  
}

message MsgQueryProperty {
  sdk.Pagination paginate = 1;
  optional sdk.TimeQuery timeQuery = 2;
  optional MsgProperty queryFields = 3;
  optional OrderProperty orderFields = 4;
}

message QueryProperty {
  string userId = 1;
  optional string id = 2;
  optional string name = 3;
}

message OrderProperty {
  optional sdk.Sort createdAt = 1;
}

// review
message MsgCreateReview{
  string userId = 1;
  optional string propertyId = 2;
  string parentId = 3;
  float rating = 4;
  string comment = 5;
  string imageUrl = 6;
}
message MsgUpdateReview{
  string reviewId = 1;
  float rating = 4;
  string comment = 5;
  string imageUrl = 6;
}

message MsgDeleteReview{
  string reviewId = 1;
}

message MsgQueryReview {
  sdk.Pagination paginate = 1;
  optional sdk.TimeQuery timeQuery = 2;
  optional QueryReview queryFields = 3;
  optional OrderReview orderFields = 4;
}

message QueryReview {
  optional string propertyId = 1;
  optional int32 rate = 2;
  optional string id = 3;

}

message OrderReview {
  optional sdk.Sort createdAt = 1;
}

// Amenity
message MsgAmenity{
  string id = 1;
  string name = 2;
  string description = 3;
  string icon = 4;
}

message MsgQueryAmenity {
  sdk.Pagination paginate = 1;
  optional sdk.TimeQuery timeQuery = 2;
  optional MsgAmenity queryFields = 3;
  optional OrderAmenity orderFields = 4;
}

message OrderAmenity {
  optional sdk.Sort createdAt = 1;
}

// Booking

message MsgBooking{
  string id = 1;
  string propertyId = 2;
  string userId = 3;
  int64 checkInDate = 4;
  int64 checkoutDate = 5;
  int32 guestNumber = 6;
  int32 childNumber = 7;
  int32 babyNumber = 8;
  int32 petNumber = 9;
  int32 nightNumber = 10;
  double totalPrice = 11;
  double totalPriceBeforeTax = 12;
  double taxFee = 13;
  optional string status = 14;
}

message MsgQueryBooking {
  sdk.Pagination paginate = 1;
  optional sdk.TimeQuery timeQuery = 2;
  optional MsgBooking queryFields = 3;
  optional OrderBooking orderFields = 4;
}

message OrderBooking {
  optional sdk.Sort createdAt = 1;
}


// Favorite
message MsgFavorite{
  string id = 1;
  string userId = 2;
  string propertyId = 3;
}

message MsgQueryFavorite {
  sdk.Pagination paginate = 1;
  optional sdk.TimeQuery timeQuery = 2;
  optional MsgFavorite queryFields = 3;
  optional OrderFavorite orderFields = 4;
}

message OrderFavorite {
  optional sdk.Sort createdAt = 1;
}
